# basicchatbot

./: .gitignore  backend.py  backend_database.py  copy_stream_frontend.py  frontend.py  frontend_database.py  main.py  pyproject.toml  requirements.txt  stream_frontend.py
